# dns-resolver

./: .gitignore  Cargo.toml  README.md
examples/: awak.rs  lookup_addr.rs  lookup_host.rs  query_a.rs  slings.rs
src/: conf.rs  dns_config.rs  dns_msg.rs  hosts.rs  lib.rs  parse.rs  resolve.rs  resolver.rs  system_conf.rs
