[package]
name = "dns-resolver"
version = "0.2.2"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/dns-reolver"
homepage = "https://github.com/cssivision/dns-reolver"
description = "dns resolver based on future"
readme = "README.md"
edition = "2018"

[dependencies]
slings = { version = "0.2", optional = true }
awak = { version = "0.2", optional = true }
domain = "0.6"
resolv-conf = { version = "0.7.0", features = ["system"] }
lru_time_cache = "0.11"

[features]
default = ["slings-runtime"]
slings-runtime = ["slings"]
awak-runtime = ["awak"]
