[package]
name = "dns-resolver"
version = "0.2.14"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/dns-reolver"
homepage = "https://github.com/cssivision/dns-reolver"
description = "dns resolver based on future"
readme = "README.md"
edition = "2018"

[dependencies]
slings = { version = "0.3", optional = true }
awak = { version = "0.2", optional = true }
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
domain = { version = "0.9", features = ["smallvec"] }
octseq = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"], optional = true }
lru_time_cache = "0.11"
smallvec = "1"
cfg-if = "1"

[features]
default = ["slings-runtime"]
slings-runtime = ["slings", "futures-util"]
awak-runtime = ["awak", "futures-util"]
tokio-runtime = ["tokio"]

